# vibe-fridge

./: .gitignore  README.md  check_wiki.py  migrate_add_icon.py  migrate_items_to_wiki.py  populate_wiki.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/models/: __init__.py  item.py  item_wiki.py
app/services/: database.py  item_service.py  wiki_service.py
app/ui/screens/: add_entry_screen.py  add_item_screen.py  item_detail_screen.py  item_wiki_detail_screen.py  item_wiki_edit_screen.py  items_screen.py  main_screen.py  recipes_screen.py  settings_screen.py
app/ui/theme/: design_tokens.py
app/ui/widgets/: __init__.py  icon_picker.py
app/utils/: font_helper.py  logger.py
tests/: test_items.py  test_ui.py  test_ui2.py
